# nexus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  basis.config.ts  docker-compose.yml  index.html  nitro.config.ts  package.json  pm2.config.mjs  pnpm-lock.yaml  vite.config.ts
.github/workflows/: docker-image.yml
server/middleware/: cors.ts
server/routes/api/: index.ts
server/routes/api/winget/: information.ts  manifestSearch.ts  packages.ts
server/routes/api/winget/packageManifests/: [id].ts
server/routes/cdn/cdnjs/: [...path].ts
server/routes/cdn/gh/: [...path].ts
server/routes/cdn/jsr/: [...path].ts
server/routes/cdn/npm/: [...path].ts
server/routes/cdn/wp/: [...path].ts
server/routes/mirror/[registry]/: [...path].ts
server/routes/registry/winget/: manifestSearch.ts  packages.ts
server/utils/: bundler.ts  integrity.ts  mime.ts  mirror.ts  storage.ts  types.ts  winget.ts
server/utils/cdn/: cache.ts  constants.ts  esm.ts  index.ts  integrity.ts  listing.ts  mime.ts  resolve.ts  semver.ts  tarball.ts  types.ts
server/utils/winget/: constants.ts  db.ts  index.ts  manifest.ts  queries.ts  response.ts  search.ts  token.ts  tree.ts  types.ts  utils.ts  version.ts
src/: config.rs  error.rs  http.rs  main.rs
src/cdn/: mod.rs
src/cdn/routes/: cdnjs.rs  combine.rs  gh.rs  jsr.rs  mod.rs  npm.rs  wp.rs
src/cdn/utils/: cache.rs  concurrency.rs  constants.rs  entry.rs  esm.rs  integrity.rs  listing.rs  mime.rs  minify.rs  mod.rs  registry.rs  resolve.rs  response.rs  singleflight.rs  tarball.rs
src/storage/: fs.rs  mod.rs  s3.rs
src/winget/: mod.rs
src/winget/routes/: catalog.rs  manifests.rs  mod.rs
src/winget/utils/: constants.rs  db.rs  http.rs  manifest.rs  mod.rs  queries.rs  response.rs  search.rs  token.rs  tree.rs
