[package]
name = "nexus"
version = "0.0.0"
edition = "2024"
description = "Universal package registry and CDN — WinGet registry, npm, GitHub, JSR, cdnjs, WordPress. Built in Rust for speed."
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "sync", "time", "io-util"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "gzip"] }
semver = "1"
node-semver = "2"
serde_yaml = "0.9"
sha2 = "0.10"
base64 = "0.22"
mime_guess = "2"
flate2 = "1"
tar = "0.4"
tempfile = "3"
strsim = "0.11"
rusqlite = { version = "0.35", features = ["bundled"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
# rust-s3 (lib name `s3`) is a lightweight reqwest-backed S3 client — reuses the
# existing reqwest/rustls/hyper-1.x stack instead of aws-sdk-s3's duplicate
# hyper-0.14 + h2-0.3 + rustls-0.21 runtime. Path-style is RustFS's default.
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
bytes = "1"
rolldown = "1.1"
# oxc shares the exact version rolldown pins (0.135) — same toolchain, no second copy.
oxc = { version = "0.135", default-features = false, features = ["minifier", "mangler", "codegen"] }
lightningcss = "1.0.0-alpha.71"
regex = "1"
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
